@@ -24,6 +24,7 @@
 * Moneris: Use a capture of $0 for void [ntalbott]
 * PayPal Express integration: Fix received_at time zone [ntalbott]
 * NAB Transact: Add refund capability [nagash]
+* Stripe: Add support for application_fee [duff]
 
 == Version 1.29.3 (December 7, 2012)
 
